I18N catch a few issues

--- a/packages/ia-components/sandbox/languages/google/_.txt
+++ b/packages/ia-components/sandbox/languages/google/_.txt
@@ -227,3 +227,9 @@ web pages
 Working on
 write a review
 Your search did not match any items in the Archive. Suggestions
+Public Domain
+Attribution
+Share Alike
+Non Commercial
+No Derivatives
+
