--- a/packages/ia-components/sandbox/languages/google/english.txt
+++ b/packages/ia-components/sandbox/languages/google/english.txt
@@ -227,3 +227,8 @@ web pages
 Working on
 write a review
 Your search did not match any items in the Archive. Suggestions
+Public Domain
+Attribution
+Share Alike
+Non Commercial
+No Derivatives
