languages - few more strings

--- a/packages/ia-components/sandbox/languages/json/english.json
+++ b/packages/ia-components/sandbox/languages/json/english.json
@@ -228,8 +228,14 @@
 "Working on": "Working on",
 "write a review": "write a review",
 "Your search did not match any items in the Archive. Suggestions": "Your search did not match any items in the Archive. Suggestions",
+"Public Domain": "Public Domain",
+"Attribution": "Attribution",
+"Share Alike": "Share Alike",
+"Non Commercial": "Non Commercial",
+"No Derivatives": "No Derivatives",
 "access": "Access",
 "accession_number": "Accession number",
+"access_restricted_item": "Access restricted item",
 "addeddate": "Added date",
 "adder": "Adder",
 "album": "Album",
@@ -433,6 +439,7 @@
 "noindex": "Noindex",
 "notes": "Notes",
 "num_recent_reviews": "Number recent reviews",
+"num_recording_errors": "Number recording errors",
 "num_reviews": "Number reviews",
 "num_top_dl": "Number top dl",
 "numeric_id": "Number eric ID",
@@ -515,6 +522,7 @@
 "sk-owner": "SK owner",
 "sk-owner-nick": "SK owner nick",
 "sk-type": "SK type",
+"software_version": "Software version",
 "sound": "Sound",
 "source": "Source",
 "source_organization": "Source organization",
