Add placeholder language files to be expanded as I18n reviewed by first-language speakers

--- a/packages/ia-components/sandbox/languages/json/english.json
+++ b/packages/ia-components/sandbox/languages/json/english.json
@@ -1,5 +1,5 @@
 {
-"ABOUT": "ABOUT",
+"ABOUT": "WHATITIS",
 "account": "account",
 "ACTIVITY": "ACTIVITY",
 "activity": "activity",
@@ -233,6 +233,12 @@
 "Share Alike": "Share Alike",
 "Non Commercial": "Non Commercial",
 "No Derivatives": "No Derivatives",
+"Offline Internet Archive": "Offline Internet Archive",
+"Read online": "Read online",
+"HTTP": "HTTP",
+"IPFS": "IPFS",
+"GUN": "GUN",
+"WEBTORRENT": "WEBTORRENT",
 "access": "Access",
 "accession_number": "Accession number",
 "access_restricted_item": "Access restricted item",
