--- a/packages/ia-activity-indicator/stories/index.stories.mdx
+++ b/packages/ia-activity-indicator/stories/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Story, Preview, Meta, Props, html, withKnobs, withWebComponentsKnobs } from '@open-wc/demoing-storybook';
 
-import '../src/ia-activity-indicator.js';
+import '../ia-activity-indicator.js';
 
 <Meta
   title="IAActivityIndicator"
